datetimepicker fixed on ie(background: transparent off.), add explaination about how to find my photo. add multi-delete function using checkbox.

--- a/app/assets/stylesheets/photos.css.scss
+++ b/app/assets/stylesheets/photos.css.scss
@@ -42,9 +42,9 @@ a:hover {
 }
 
 #search_area{
-display:inline-block;
+        display:inline-block;
   zoom:1;
-  .display:inline;
+  *display:inline;
   float:right;
   border-radius:5px;
   text-align:center;
@@ -56,7 +56,7 @@ display:inline-block;
 }
 
 .search_box{
-  background:transparent;
+  //background:transparent;
   border: 1px solid $box_border_color;
   border-radius:5px;
   width:150px;
